SearchView: Fix missing signal/slot connection to project plugin

Summary:
...to notice project change after session switch

Without this patch was the project offer in the m_ui.searchPlaceCombo
after a session switch gone

Reviewers: #kate, sars

Reviewed By: #kate, sars

Subscribers: sars, kwrite-devel, #kate

Tags: #kate

Differential Revision: https://phabricator.kde.org/D17296

BUG:347311